--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ gunicorn==20.1.0
 idna==3.3
 jmespath==1.0.1
 Pillow==9.2.0
-psycopg2==2.9.3
+psycopg2-binary==2.9.6
 python-dateutil==2.8.2
 requests==2.28.1
 s3transfer==0.6.0
